--- a/templates/index.html
+++ b/templates/index.html
@@ -70,7 +70,7 @@
         <div class="col-lg-8 col-md-10 mx-auto">
           {%for post in posts%}
           <div class="post-preview">
-            <a href="{% url 'post_detail' pk=post.pk %}">
+            <a href="{% url 'post_detail' pk=post.pk title=post.slug %}">
               <h2 class="post-title">
                 {{post.titulo}}
               </h2>
