--- a/templates/index.html
+++ b/templates/index.html
@@ -7,9 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-
+    <meta property="og:image" content="/static/img/icon.jpg">
+    <meta property="og:description" content="Blog donde publico cosas sobre tecnología,ciencia y muchas cosas más.">
     <title>Jack Cloudman | Blog</title>
-
     <!-- Bootstrap core CSS -->
     <link href="/static/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
