--- a/templates/base.html
+++ b/templates/base.html
@@ -7,14 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <meta property="og:description" content="{{post.descripcion}}">
-    {% if post.foto_encabezado %}
-    <meta property="og:image" content="/{{post.foto_encabezado}}">
-    {% else %}
-    <meta property="og:image" content="/static/img/default_post.jpg">
-    {% endif %}
-     
-    <title>{{post.titulo}}</title>
+
+    <title>Jack Cloudman | Blog</title>
 
     <!-- Bootstrap core CSS -->
     <link href="/static/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -28,10 +22,6 @@
     <link href="/static/css/clean-blog.min.css" rel="stylesheet">
     <link rel="icon" href="/static/img/icon.jpg">
     <style type="text/css">
-    .responsive{
-      width: 100%;
-      height: auto;
-    }
       .search{
         height: 100%;
       }
@@ -44,7 +34,6 @@
         padding-right: 10px;
       }
     </style>
-
   </head>
 
   <body>
@@ -63,14 +52,14 @@
               <a class="nav-link" href="/">Inicio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html">Acerca de</a>
+              <a class="nav-link" href="/about">Acerca de</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="https://t.me/JackCloudman">Contacto</a>
             </li>
-            <form class="navbar-form" role="search" method="GET" action="/search">
+            <form class="navbar-form" role="search" action="/search">
         <div class="input-group">
-            <input type="text" class="form-control search" placeholder="Buscar" name="q">
+            <input type="text" class="form-control search" placeholder="Buscar" name="q" value="{{request.GET.q}}">
             <div class="input-group-btn">
                 <button class="btn btn-default rounded-right" type="submit" id="sicon"><i class="fa fa-search"></i></button>
             </div>
@@ -82,44 +71,11 @@
     </nav>
 
     <!-- Page Header -->
-    
-    {% if post.foto_encabezado %}
-    <header class="masthead" style="background-image: url('/{{post.foto_encabezado}}')">
-{% else %}
-    <header class="masthead" style="background-image: url('/static/img/default_post.jpg')">
-
-{% endif %}
-      <div class="overlay"></div>
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-8 col-md-10 mx-auto">
-            <div class="post-heading">
-              <h1>{{post.titulo}}</h1>
-              <h2 class="subheading">{{post.descripcion}}</h2>
-              <span class="meta">Publicado por
-                <a href="#">{{post.autor|title}}</a>
-                el {{post.fecha_publicado}}</span>
-            </div>
-          </div>
-        </div>
-      </div>
-    </header>
-
-    <!-- Post Content -->
-    <article>
-      <div class="container custom">
-        <div class="row">
-          <div class="col-lg-8 col-md-10 mx-auto" style="text-align: justify;">
-            {{ post.formatted_markdown|safe }}
-          </div>
-        </div>
-      </div>
-    </article>
-
-    <hr>
+		{% block content %}
+        {% endblock %}
 
     <!-- Footer -->
-   <footer>
+    <footer>
       <div class="container">
         <div class="row">
           <div class="col-lg-8 col-md-10 mx-auto">
