add syntax highlighter

--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -27,6 +27,9 @@
     <!-- Custom styles for this template -->
     <link href="/static/css/clean-blog.min.css" rel="stylesheet">
     <link rel="icon" href="/static/img/icon.jpg">
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.8/styles/monokai.min.css">
+    <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.8/highlight.min.js"></script>
+    <script>hljs.initHighlightingOnLoad();</script>
     <style type="text/css">
     .responsive{
       width: 100%;
